Closed Bug 1292310 Opened 8 years ago Closed 8 years ago

Enter/return key opens entries from drop down menu without pressing arrow keys first on FF 46+

Categories

(Firefox :: Address Bar, defect, P1)

46 Branch
defect

Tracking

()

VERIFIED FIXED
Firefox 51
Tracking Status
firefox48 --- wontfix
firefox49 --- wontfix
firefox-esr45 --- unaffected
firefox50 --- verified
firefox51 --- verified

People

(Reporter: Foxy-P, Assigned: mak)

References

Details

(Keywords: regression, Whiteboard: [fxsearch])

Attachments

(1 file)

See https://bugzilla.mozilla.org/show_bug.cgi?id=1043584

Regression from Firefox 48 onwards.
Keywords: regression
Summary: Enter/return key opens entries from drop down menu without pressing arrow keys first on FF 48 → Enter/return key opens entries from drop down menu without pressing arrow keys first on FF 48+
See Also: → 1043584
https://hg.mozilla.org/integration/fx-team/pushloghtml?fromchange=8fc9a5eeede3b4551dbcbf0a77fe40349914c83e&tochange=55dd1f2654bdf945bdb9300abaac4c0b4ac0abd3


STR:
Open Firefox with an new profile.
Open http://mozilla.org/ for make auto complete domain to take effect.
Type mozilla.org (can be a part) in urlbar to get suggestions.
Mouse over to a suggest, and then return to the address bar and click to eliminate the list of suggestions and keep the auto-completed domain.
Press Enter key, you will see the last hovering item is opened, instead of the auto-complete result.
Blocks: 1234186
Status: UNCONFIRMED → NEW
Ever confirmed: true
Version: 48 Branch → 46 Branch
ni? Cristi here, he might be able to provide a regression range for this bug.
Flags: needinfo?(cristian.comorasu)
Gijs or Marco can fix this bug, but both are away right now.
Hello! I managed to find it's regression.

Fx 46.0a1

Last good: 2016 ian 21 build ID: 20160121030208

First bad: 2016 ian 22 build ID: 20160122030244

Pushlog: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=977d78a8dd78afbc0153d37fd9887c3a200dce6a&tochange=10254da3c9da73e834059c1972f2e52b89fafb5f
Flags: needinfo?(cristian.comorasu)
Priority: -- → P1
Whiteboard: [fxsearch]
Not a recent regression, however, happy to take a fix in 49
See Also: → 1295463
Assignee: nobody → mak77
Status: NEW → ASSIGNED
Summary: Enter/return key opens entries from drop down menu without pressing arrow keys first on FF 48+ → Enter/return key opens entries from drop down menu without pressing arrow keys first on FF 46+
Comment on attachment 8788807 [details]
Bug 1292310 - Enter may wrongly confirm a mouse selected entry in the urlbar.

https://reviewboard.mozilla.org/r/77162/#review75692
Attachment #8788807 - Flags: review?(adw) → review+
Pushed by mak77@bonardo.net:
https://hg.mozilla.org/integration/autoland/rev/c35d8f056f67
Enter may wrongly confirm a mouse selected entry in the urlbar. r=adw
https://hg.mozilla.org/mozilla-central/rev/c35d8f056f67
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 51
Comment on attachment 8788807 [details]
Bug 1292310 - Enter may wrongly confirm a mouse selected entry in the urlbar.

Approval Request Comment
[Feature/regressing bug #]: bug 1234186
[User impact if declined]: Sometimes the wrong awesomebar entry is visited, quite annoying
[Describe test coverage new/current, TreeHerder]: unit test
[Risks and why]: The code change is small and covered by unit tests. it's an easy backout in the worst case, so the risk is limited. 
[String/UUID change made/needed]: none
Attachment #8788807 - Flags: approval-mozilla-aurora?
I reproduced this bug using Fx 51.0a1, build ID: 20160804030441, on Windows 10 x64.
I can confirm the bug is fixed, I verified using Fx 51.0a1 build ID: 20160909030428, on Windows 10 x64, Ubuntu 14.04 LTS and Mac OS X 10.9.5.
Status: RESOLVED → VERIFIED
Comment on attachment 8788807 [details]
Bug 1292310 - Enter may wrongly confirm a mouse selected entry in the urlbar.

Recent regression, fix was verified on Nightly, Aurora50+
Attachment #8788807 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
I can confirm the fix on Fx 50.0a2 (20160913004005). I verified it on Windows 10 x64, Ubuntu 14.04 LTS and Mac OS X 10.10.5 .
Depends on: 1302472
Depends on: 1349716
You need to log in before you can comment on or make changes to this bug.