Bug 1292310 - Enter may wrongly confirm a mouse selected entry in the urlbar. r=adw

MozReview-Commit-ID: 6teMoPr1vb6